--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
           </button>
         </div>
           <div id="collapsable-nav" class="collapse navbar-collapse ">
-            <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
+            <ul id="nav-list" class="nav navbar-nav visible-xs">
              <li>
-               <a href="menu-categories.html">
-                 <br class="hidden-xs"> Chicken</a>
+               <a href="menu-categories.html" style="border: 1px solid black; ">
+                 <br class="hidden-xs nav-sextion"> Chicken</a>
              </li>  
              <li>
-               <a href="#">
-                 <br class="hidden-xs"> Beef</a>
+               <a href="#" style="border: 1px solid black; ">
+                 <br class="hidden-xs nav-sextion" > Beef</a>
              </li>
              <li>
-               <a href="#">
-                 <br class="hidden-xs"> Sushi</a>
+               <a href="#" style="border: 1px solid black; ">
+                 <br class="hidden-xs nav-sextion" > Sushi</a>
              </li>
              <li id="phone" class="hidden-xs">
                <a href="tel:410-602-5008">
